# kgv

./: Cargo.toml  LICENSE  README.md
default_config/modules/: autoscale.rhai  clusterrole.rhai  commons.rhai  configmap.rhai  container.rhai  crd.rhai  daemonset.rhai  deployment.rhai  event.rhai  istio.rhai  namespace.rhai  node.rhai  pod.rhai  roles.rhai  service.rhai  statefulset.rhai  webhooks.rhai
default_config/views/detail/: base.hbs  configmap.hbs  crd.hbs  daemonset.hbs  deployment.hbs  elbv2.targetgroupbinding.hbs  event.hbs  flux.alert.hbs  flux.helm.chart.hbs  flux.helm.release.hbs  flux.helm.repo.hbs  flux.kustomization.hbs  istio.requestauthentication.hbs  istio.virtualservice.hbs  namespace.hbs  node.hbs  replicaset.hbs  role.binding.any.hbs  secret.hbs  service.hbs  serviceaccount.hbs  statefulset.hbs
default_config/views/list/: admission.mutatingwebhookconfiguration.yaml  admission.validatingwebhookconfiguration.yaml  apiservice.yaml  autoscale.hpa.yaml  autoscale.metric.yaml  autoscale.pa.yaml  clusterrole.binding.yaml  clusterrole.rule.yaml  clusterrole.yaml  configmap.yaml  container.yaml  crd.yaml  daemonset.yaml  deployment.yaml  elbv2.ingressclassparams.yaml  elbv2.targetgroupbinding.yaml  event.yaml  flux.alert.yaml  flux.git.repo.yaml  flux.helm.chart.yaml  flux.helm.release.yaml  flux.helm.repo.yaml  flux.kustomization.yaml  flux.provider.yaml  istio.authorizationpolicy.yaml  istio.destinationrule.yaml  istio.gateway.yaml  istio.peerauthentication.yaml  istio.requestauthentication.yaml  istio.sidecar.yaml  istio.virtualservice.yaml  istio.wasmplugin.yaml  namespace.yaml  node.yaml  pod.yaml  replicaset.yaml  role.binding.yaml  role.rule.yaml  role.yaml  secret.yaml  (+5 more)
extractor_config_files/: pod.yaml
k8s-mocks/: Chart.yaml  values.yaml
k8s-mocks/templates/: NOTES.txt  _helpers.tpl  clusterrole-1.yaml  clusterrole-2.yaml  deployment.yaml  hpa.yaml  ingress.yaml  quota.yaml  service.yaml  serviceaccount.yaml
k8s-mocks/templates/tests/: test-connection.yaml
src/: main.rs  reexports.rs
src/backend/: fs_cache.rs  k8s_backend.rs  log_manager.rs  mod.rs  port_forwarder.rs  reflector_registry.rs  remove_manager.rs
src/client/: macro.rs  mod.rs
src/config/: args.rs  extractor.rs  extractor_configuration.rs  kgv_configuration.rs  mod.rs
src/eval/: engine_factory.rs  eval_result.rs  evaluator.rs  helpers.rs  mod.rs
src/model/: dynamic_object.rs  impls.rs  log_request.rs  macro.rs  mod.rs  port_forward_request.rs  pseudo_resource.rs  reflector_registry.rs  resource_column.rs  resource_view.rs  traits.rs
src/model/dynamic_object/: mod.rs
src/model/ext/: gvk.rs  mod.rs  pod.rs
src/model/pod/: mod.rs  pod_container_column.rs  pod_container_view.rs  table_view_item.rs
src/model/resource/: mod.rs  resource_view.rs  table_view_item.rs
src/reexports/: k8s.rs  mod.rs  sync.rs
src/theme/: mod.rs
src/traits/: mod.rs
src/traits/ext/: bool_ext.rs  cloning_callback.rs  container.rs  container_port.rs  container_state.rs  cursive.rs  engine.rs  evaluated_resource.rs  gvk.rs  kanal_sender.rs  kube_config.rs  layer_position.rs  mod.rs  mutex.rs  pod.rs  rw_lock.rs  table_view.rs
src/ui/: backend.rs  column_registry.rs  command_handler_loop.rs  components.rs  detail_view_renderer.rs  dispatch.rs  dispatcher.rs  fs_cache.rs  highlighter.rs  hotkeys.rs  impls.rs  interactive_command.rs  k8s_backend.rs  logging.rs  loops.rs  mod.rs  pseudo_resource_extractor.rs  resource_column.rs  resource_manager.rs  signals.rs  traits.rs  ui_dispatch.rs  ui_signal_dispatch.rs  ui_store.rs  ui_store_context_dispatch.rs  ui_store_dispatch.rs  view_meta.rs  view_stack.rs
src/ui/components/: code_view.rs  detail_view.rs  gvk_list_view.rs  gvk_switcher.rs  log_view.rs  menu.rs  mod.rs  pod_detail.rs  port_forward_view.rs  port_forwarding_dialog_view.rs  port_forwarding_view.rs  window_switcher.rs
src/ui/dispatch/: backend_dispatch_ext.rs  backend_dispatcher.rs  mod.rs  send_helper_ext.rs  ui_dispatch_ext.rs  ui_dispatcher.rs
src/ui/pod/: impls.rs  mod.rs  pod_container_column.rs  (+1 more)
src/util/: error.rs  fs.rs  k8s.rs  mod.rs  panics.rs  paths.rs  ui.rs  view_with_data.rs  watcher.rs
templates/: goals.rhai  template.hbs
(+9 files in other folders)
