[package]
name = "kgv"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive_table_view = "0.14"
rand = "0.8"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1.25", features = ["full"] }
kanal = "0.1.0-pre8"
futures = "0.3"
async-trait = "0.1"
itertools = "0.10"
cruet = "0.13"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4"
serde = "1"
serde_yaml = "0.9"
chrono = "0.4"
home = "0.5"
termion = "2"
cursive_buffered_backend = "0.6"
cursive-markup = "0.3"
cursive-flexi-logger-view = "^0"
cursive-syntect = "0.1"
syntect = "5"
flexi_logger = "0.22"

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["termion-backend"]

[dependencies.text-style]
version = "0.3.0"
features = ["cursive", "syntect", "termion"]
